--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
 .App {
+  padding: 20px 36px;
+  margin: 20px;
+}
+.suggesstion {
+  list-style: none;
+  background: whitesmoke;
+  color: #21243d;
+  border-radius: 6px;
+  padding: 6px 10px;
+}
+.suggesstion li {
+  padding: 8px;
+  cursor: pointer;
+}
+.suggesstion li:hover {
+  background: #21243d;
+  color: whitesmoke;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
